# xtr

./: AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
examples/: config.toml  gepa.rs
examples/examples/: title.jsonl
examples/examples/contact_details/: business_card_1.json  business_card_1.toml  contact_form.json  contact_form.toml  email_signature.json  email_signature.toml  executive_assistant.json  executive_assistant.toml  international_contact.json  international_contact.toml  linkedin_profile.json  linkedin_profile.toml  minimal_info.json  minimal_info.toml  social_media_heavy.json  social_media_heavy.toml
examples/examples/event/: calendar_description.json  calendar_description.toml  conference.json  conference.toml  email_invitation.json  email_invitation.toml  flyer_text.json  flyer_text.toml  german_conference.json  german_conference.toml  german_email_invitation.json  german_email_invitation.toml  german_networking.json  german_networking.toml  german_slack_message.json  german_slack_message.toml  german_text_message.json  german_text_message.toml  german_training.json  german_training.toml  german_webinar.json  german_webinar.toml  german_workshop.json  german_workshop.toml  meeting_notes_excerpt.json  meeting_notes_excerpt.toml  networking_event.json  networking_event.toml  podcast.json  podcast.txt  slack_announcement.json  slack_announcement.toml  team_meeting.json  team_meeting.toml  text_message.json  text_message.toml  training_session.json  training_session.toml  webinar.json  webinar.toml  (+4 more)
examples/examples/example_generator/: contact_extraction_schema.json  enum_coverage_schema.json  simple_title_schema.json
examples/examples/title/: example_1.json
examples/input_json/: movie.json
examples/schemas/: example_generator.json  title.json
scripts/: install-xtr.sh  sync-schemas.sh  validate-schemas.sh
xtr-api/: Cargo.toml
xtr-cli/: Cargo.toml
xtr-cli/src/: commands.rs  create.rs  main.rs
xtr-core/: Cargo.toml
xtr-core/src/: config.rs  engine.rs  examples.rs  lib.rs  lm.rs  mlflow_logger.rs  optimization.rs
