[package]
name = "xtr-cli"
version = "0.2.0"
edition = "2024"
description = "Command-line interface for XTR - structured data extraction from unstructured text"
license = "MIT"
repository = "https://github.com/byteowlz/xtr"
homepage = "https://github.com/byteowlz/xtr"
documentation = "https://github.com/byteowlz/xtr#readme"
publish = false

[dependencies]
anyhow = "1"
xtr-core = { path = "../xtr-core" }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
json-schema-generator = "0.1.1"

[[bin]]
name = "xtr"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
