[package]
name = "xtr-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
mlflow = ["mlflow_rs"]

[dependencies]
anyhow = "1"
config = { version = "0.14", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
dspy-rs = { git = "https://github.com/krypticmouse/DSRs", rev = "0506c83b4c26e42d6251569869e5fb5adad7658b", package = "dspy-rs" }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
bon = "3.8.1"
jsonschema = "0.17"
indexmap = "2.2"
toml = "0.8"
async-trait = "0.1"
mlflow_rs = { version = "0.1", optional = true }
chrono = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
